--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1",
     "vite-tsconfig-paths": "^5.1.4"
+  },
+  "engines": {
+    "node": ">=18.18.0"
   }
 }
