--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,8 @@
 VITE_API_BASE_URL=http://localhost:8000/api
+
+# Auth0
+VITE_AUTH0_DOMAIN=dev-xxxxxxxxxxxxxxxx.us.auth0.com
+VITE_AUTH0_CLIENT_ID=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+VITE_AUTH0_AUDIENCE=http://xxx
+VITE_AUTH0_CALLBACK_URL=http://localhost:5173/callback
+VITE_API_SERVER_URL=http://localhost:8000
