--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.3.0",
     "@chakra-ui/react": "^3.17.0",
     "@emotion/react": "^11.14.0",
     "@tanstack/react-query": "^5.75.0",
